--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "handlebars": "^4.7.7",
     "parcel-bundler": "^1.12.5",
+    "parcel-plugin-handlebars-precompile": "^1.0.2",
     "sass": "^1.38.0"
+  },
+  "dependencies": {
+    "handlebars": "^4.7.7"
   }
 }
